--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -5,7 +5,7 @@ body {
     width: 100%;
     font-family: 'Dancing Script', cursive;
     font-size: 25px;
-    background-image: url('./bg.png');
+    background-image: url('./blue.png');
     background-color: transparent;
     /* opacity: 10%; */
 }
