--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -359,14 +359,15 @@ body {
 
 #main {
     z-index: 1;
-    background: #15aabf;
+    color: white;
+    background: #50c2d1;
     border-radius: 5px;
     margin: 10px auto;
     width: 80%;
     padding: 5px 5px;
     border: 2px dashed #fff;
-    outline: 2px dashed #1081e0;
-    box-shadow: 0 0 0 6px #15aabf, 0 0 1px 7px #1081e0;
+    outline: 2px dashed #00adbf;
+    box-shadow: 0 0 0 6px #50c2d1, 0 0 1px 7px #00adbf;
 }
 
 .imgSide {
