--- a/contact/style/contact.css
+++ b/contact/style/contact.css
@@ -30,21 +30,53 @@ html {
 }
 
 .contact_info {
+    position: relative;
+    z-index: 98;
+    margin-top: 50px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 1px 1px 5px 0px lightgrey inset, -1px -1px 5px 0px lightgrey inset;
+    display: block;
     grid-area: box1;
     padding-left: 25px;
     padding-bottom: 25px;
     width: 40vw;
+    position: center;
     /* grid-area: box1; */
     font-size: 22px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Dancing Script', cursive;
     height: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 30px auto;
+    /*margin-right: auto;
     /* margin-bottom: 50px; */
     text-align: left;
+}
+
+.contact_info2 {
+    position: relative;
+    z-index: 98;
+    margin-top: 50px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px 0px lightgrey inset, -1px -1px 5px 0px lightgrey inset;
+    display: block;
+    grid-area: box1;
+    padding-left: 25px;
+    padding-bottom: 25px;
+    width: 40vw;
+    position: center;
+    /* grid-area: box1; */
+    font-size: 25px;
+    font-family: 'Dancing Script', cursive;
+    height: fit-content;
+    margin: 30px auto;
+    /*margin-right: auto;
+    /* margin-bottom: 50px; */
+    text-align: center;
+}
+
+.contact_info2 h1{
+    font-size: 1.5em;
 }
 
 .contact_info a {
@@ -79,7 +111,100 @@ html {
     padding-top: 10px;
     padding-left: -50px;
     /* padding: 10px -100px; */
+
 }
+
+input[type="text"],
+textarea {
+  width: 80%;
+  padding: 6px;
+  font-size: 16px;
+  border: 1px solid rgb(109, 217, 224);
+  background: rgb(244, 247, 246);
+  margin-bottom: 50px;
+}
+/*Slider*/
+input[type="range"] {
+    position: relative;
+    margin: 0 90px;
+  }
+input[type="range"]:before,
+input[type="range"]:after {
+  position: absolute;
+  font-family: 'Dancing Script', cursive;
+  
+  font-size: 25px; 
+  letter-spacing: 0.5px;
+  top: -2px;
+  color: #015564;
+}
+input[type="range"]:before{
+    content: "poor";
+    left: -100px;
+  }
+  input[type="range"]:after{
+    content: "excellent";
+    right: -120px;
+  }
+
+input[type="range"] {
+    -webkit-appearance: none !important;
+    display: inline-block;
+    height: 15px;
+    width: 400px;
+    margin: 26px 0px 50px 100px;
+    background: #DAEAE6;
+    border: 1px solid #20bfcf;
+    border-radius: 10px;
+    display: block;
+  }
+
+  input[type="range"]:focus {
+    outline: none;
+  }
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none !important;
+    background: #20bfcf;
+    height: 20px;
+    width: 20px;
+    border: 4px solid #20bfcf;
+    border-radius: 20px;
+    box-shadow: 0 0 0 1px #20bfcf, 0 0 8px #20bfcf inset;
+    box-sizing: border-box;
+    cursor: pointer;
+    transition: all 0.15s;
+  }
+
+input[type="range"]::-webkit-slider-thumb:hover, input[type="range"]::-webkit-slider-thumb:active {
+    height: 20px;
+    width: 20px;
+    border: 6px solid #015564;
+    background: #fff;
+    box-shadow: 0 0 0 0px rgb(0, 162, 191), 0 0 8px #015564 inset;
+  }
+
+/* end of slider*/
+input[type="submit"] {
+    display: block;
+    margin: 20px auto 50px;
+    height: 34px;
+    width: 125px;
+    font-family: 'Dancing Script', cursive;
+    letter-spacing: 0.5px;
+    background-image: linear-gradient(to bottom right, #10bbb6, #20bfcf);
+    border: 0px solid;
+    color: #fff;
+    font-size: 13px;
+    border-radius: 50px;
+    font-size: 1em;
+    position: auto;
+    
+  }
+  input[type="submit"]:hover {
+    background: #12656d;
+    cursor: pointer;
+  }
 
 .order {
     /* display: block; */
@@ -93,12 +218,32 @@ html {
     border-radius: 50px;
 }
 
+.order:hover {
+    background-color: #12656d;
+}
+
 .feedbackForm {
     margin-left: -50px;
     padding: 0;
     width: 40vw;
     height: 450px;
 }
+#tboxc {
+    /* position: absolute; */
+    /* left: 20%; */
+    /* background-image: url('/static/assets/bg.png'); */
+    position: relative;
+    z-index: 98;
+    text-align: center;
+    margin-top: 50px;
+    opacity: 100;
+    width: 75vw;
+    border-radius: 10px;
+    display: block;
+    padding: 30px 30px;
+    margin: 0px auto 0px auto;
+}
+
 
 @media (max-width: 767px) {
     .container {
