--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -233,6 +233,7 @@ body {
     grid-template-rows: auto auto;
     grid-template-columns: auto;
     grid-template-areas: "box1 box2";
+    width: 100%s;
 }
 
 .footerLinks {
@@ -372,9 +373,10 @@ body {
 
 .imgSide {
     width: 30%;
+    height: 150%;
     float: left;
     padding: 2%;
-    padding-top: 0%;
+    padding-top: 2%;
 }
 
 #main>p {
